# project-448

./: .env  .env.development  .env.example  .env.production  .gitignore  .gitmodules  .prettierrc  README.md  biome.jsonc  build.sh  config.example.yaml  env.d.ts  index.html  lefthook.json  package.json  pnpm-lock.yaml  remotion.config.ts  tsconfig.base.json  tsconfig.json  vite.config.ts
assets/: config.json
configs/: development.json  development.yaml  production.json  production.yaml
downloader/: .gitignore  .swcrc  package.json  tsconfig.json  types.d.ts
frontend/: next.config.js  package.json  tsconfig.json
main.ssproj/: .ssproj  SSAutoLoop12.ssfile  SSAutoLoop30.ssfile  {0027DA1F-AC16-416A-8485-FE4D1729318F}.ssa  {0027DA1F-AC16-416A-8485-FE4D1729318F}.ssfile  {00887CB3-1BA2-453C-80A0-D5DB47E1BF40}.ssa  {00887CB3-1BA2-453C-80A0-D5DB47E1BF40}.ssfile  {00BEDDAC-2756-4BB0-A41F-F7658A074FC7}.ssa  {00BEDDAC-2756-4BB0-A41F-F7658A074FC7}.ssfile  {00C5B776-A711-4CF0-97C0-D30C5CAE6342}.ssa  {00C5B776-A711-4CF0-97C0-D30C5CAE6342}.ssfile  {00DDDA78-29E8-4E48-9447-E4E18D22B0C6}.ssa  {00DDDA78-29E8-4E48-9447-E4E18D22B0C6}.ssfile  {012DD0ED-CF1B-4315-94B4-566B05C96D66}.ssfile  {01B334D4-3D13-4ED3-B99A-C49965D99367}.ssa  {01B334D4-3D13-4ED3-B99A-C49965D99367}.ssfile  {01C84EE6-A122-4C04-9888-4A3DF94959D9}.ssa  (+3329 more)
plugin/: .clang-format  .gitignore  CMakeLists.txt  Main.cpp  package.json  test.js
plugin/include/vdj/: vdjOnlineSource.h  vdjVideo8.h
plugin/src/: Main.cpp  project448.cpp  project448.h  util.cpp  util.h  vdjDsp8.h  vdjPlugin8.h
proxy/: fetchSpotifyLyrics.ts  (+4 more)
(+1136 files in other folders)
